VERSION_MAJOR = 3
VERSION_MINOR = 09
CHANGELOG_0 = Update: latest CM10.1 sources.
CHANGELOG_1 = Feature: Added TV like screen-off animation
CHANGELOG_2 = 
CHANGELOG_3 = 
CHANGELOG_4 = 
CHANGELOG_5 = 
CHANGELOG_6 = 
CHANGELOG_7 = 
CHANGELOG_8 = 
CHANGELOG_9 = 

V3.08
Update: latest CM10.1 sources.
BugFix: Fixed bug in System Settings
Kernel: Switched to INFAMOUSAOKP kernel (GT-P75xx only)
BuildChange: Changelog maintained in changelog.txt
BuildChange: Version number maintained in changelog.txt

V3.07
New CM10.1 feature: Expanded desktop
Latest CM10.1 sources

V3.06
Corrected problem with switch from TabletUI to PhoneUI
Shortened URLs no loncger blocked
Latest CM10.1 sources

V3.05
Small cosmetic changes in system settings
Latest CM10.1 sources

V3.04
Corrected problem with TabletUI not working.
Added option to select position of  Navigation bar (left, center, right) in the "standard" Phablet UI.
Latest CM10.1 sources (Android 4.2.2 R1)
Latest pershot kernel 
Updated rom_stats to send current country, even if it is a WiFi tablet
Updated rom_stats to send WiFi if it is a WiFi tablet instead of unknown provider
Updated ads-free hosts file (credits to BSDgeek_Jake http://forum.xda-developers.com/showthread.php?t=1916098)

V3.03
Latest CM10.1 sources (Android 4.2.2 now!)
Added ROMstats to get some feedback how often my ROM is used.
Updated sources for N7000 (Samsung Galaxy Note) and P6800 (Samsung Galaxy Tab 7.7)
MTP and ADB should now automatically be on after flashing
Developer options and Performance tabs in Settings are now visible by default
Removed many developer options that are not important for most users

V3.02
Added default boot into Tablet UI or Phone UI depending on build.prop entry sys.tablet.mode
Fixed missing battery percentage
Fixed wallpaper selection for lockscreen

V3.01
Corrected reboot bug in power menu & updated to latest Cm10.1 sources.
Added switch for Phone UI and Tablet UI in settings. Thanks to SGT7

V3.00