@@ -2,7 +2,7 @@ VERSION_MAJOR = 3
 VERSION_MINOR = 09
 CHANGELOG_0 = Update: latest CM10.1 sources.
 CHANGELOG_1 = Feature: Added TV like screen-off animation
-CHANGELOG_2 = 
+CHANGELOG_2 = Feature: Added Ganbarou changelog in Settings->About tablet
 CHANGELOG_3 = 
 CHANGELOG_4 = 
 CHANGELOG_5 = 
@@ -11,6 +11,7 @@ CHANGELOG_7 =
 CHANGELOG_8 = 
 CHANGELOG_9 = 
 
+OLDVERSION_LOG = 
 V3.08
 Update: latest CM10.1 sources.
 BugFix: Fixed bug in System Settings
